Se agregó swagger 2
