# models/bancos.js
@@ -1,0 +1,13 @@
+const { Schema, model } = require('mongoose');
+
+const bancosSchema = new Schema({
+    nombre: { type: String, required: true, unique: true },
+    ubicacion: { type: String, required: true },
+    bateria: { type: Number, required: true },
+    disponible: { type: Boolean, required: true},
+    token: { type: String, requierd: false },
+});
+
+const Bancos = model('Bancos', bancosSchema);
+
+module.exports = Bancos;
